# tetris-ai

./: .gitignore  404.html  404.html.br  Cargo.toml  LICENSE  README.md  bun.lockb  devenv.nix  flake.nix  index.html  index.html.br  package.json  pnpm-lock.yaml  svelte.config.js  tetris.py  vite.config.ts
.github/workflows/: deploy.yaml
_app/: version.json  version.json.br
_app/immutable/assets/: 0.Cx4ouQXN.css  0.Cx4ouQXN.css.br  0.DvjHx13D.css  2.BwllDQfU.css  2.BwllDQfU.css.br  2.CdhfqIsr.css  Game.B7Wl-bwS.css  Game.B7Wl-bwS.css.br  Game.BEmjUq0o.css  Game.BEmjUq0o.css.br  Game.BJ8YlBI7.css  Game.BJ8YlBI7.css.br  Game.BK308bdy.css  Game.BK308bdy.css.br  Game.C-E-K7V5.css  Game.C-E-K7V5.css.br  Game.CU44aacd.css  Game.CU44aacd.css.br  Game.CZSdFD7y.css  Game.CZSdFD7y.css.br  Game.CwgtBiq5.css  Game.CwgtBiq5.css.br  Game.D0s2SyFM.css  Game.D0s2SyFM.css.br  Game.D5qinhRq.css  Game.D5qinhRq.css.br  Game.Dawtm3XP.css  Game.Dawtm3XP.css.br  Game.DxupRuBL.css  Game.DxupRuBL.css.br  _layout.DvjHx13D.css.br  _page.BUQXSU3I.css  _page.BUQXSU3I.css.br  _page.CdhfqIsr.css.br  tetris_ai_bg.84VTsYr_.wasm  tetris_ai_bg.84VTsYr_.wasm.br  tetris_ai_bg.B-8F7CUO.wasm  tetris_ai_bg.B-8F7CUO.wasm.br  tetris_ai_bg.CAFJoGqn.wasm  tetris_ai_bg.CAFJoGqn.wasm.br  (+10 more)
_app/immutable/chunks/: -0GsY7rq.js  -0GsY7rq.js.br  1xJDnU6d.js  1xJDnU6d.js.br  2lNKfzq2.js  2lNKfzq2.js.br  572c0_6E.js  572c0_6E.js.br  5g6Not2g.js  5g6Not2g.js.br  6D2Z6NYM.js  8BJGHyUl.js  (+254 more)
benches/: copy.rs  game.rs
frontend/: index.html  tetris.js
pkg/: package.json  tetris_ai.d.ts  tetris_ai.js  tetris_ai_bg.wasm  tetris_ai_bg.wasm.d.ts
src/: app.css  app.html  board.rs  feature.rs  lib.rs  main.rs  move.rs  piece.rs  preprocess-inline-svg.d.ts  state.rs  test.rs
src/lib/: DynamicIcon.svelte  ExampleBoard.svelte  Game.svelte  GameControls.svelte  Goals.svelte  Header.svelte  LangSwitcher.svelte  Level.svelte  PlayableGame.svelte  PlayableTetris.svelte  Scoreboard.svelte  StatsPanel.svelte  Tetris.svelte  TetrisBoard.svelte  TetrisTrainer.svelte  TrainTetris.svelte  WeightsControl.svelte  WeightsDisplay.svelte  animator.svelte.ts  display.ts  example-boards.ts  levels.ts  simulator.svelte.ts  stores.svelte.ts  theme.svelte.ts  theme.ts  types.ts  weights.svelte.ts  worker.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
tests/: game.rs
tetris-ai/: Cargo.toml  tetris.py
tetris-ai/benches/: game.rs
tetris-ai/src/: board.rs  feature.rs  game.rs  learn.rs  lib.rs  main.rs  move.rs  piece.rs  rng.rs  simulator.rs  state.rs  test.rs  train.rs
(+256 files in other folders)
