[package]
name = "tetris-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"
pyo3 = { version = "0.23.2", features = ["auto-initialize"] }

[[bench]]
name = "game"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
rpath = true
