[package]
name = "tetris-ai"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "0.8.5" }
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen = "0.2.100"
serde = "1.0.217"
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
criterion = "0.5.1"
pyo3 = { version = "0.23.4", features = ["auto-initialize"] }

[[bench]]
name = "game"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
rpath = true
