[package]
name = "tetris-ai"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "0.9.1" }
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1.0.219", features = ["derive"] }

# wasm
wasm-bindgen = { version = "0.2.100", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
log = "0.4.27"
rand_distr = "0.5.1"

[features]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook"]

[dev-dependencies]
criterion = "0.5.1"
pyo3 = { version = "0.24.1", features = ["auto-initialize"] }

[[bench]]
name = "game"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
