[package]
name = "tetris-ai"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
log = "0.4.27"
rand = "0.9.1"
rand_distr = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }

# wasm
wasm-bindgen = { version = "0.2.100", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook"]

[dev-dependencies]
pyo3 = { version = "0.24.2", features = ["auto-initialize"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
